add new paragraph

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>TouchyBaby</h1>
     <p>TouchyBaby is very handsome</p>
-    
+    <h2>Tiewly kak mak mak</h2>
     <div id="output"></div>
 
     <script src="main.js"></script>
