add picture &fix add data

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,31 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is Contact Page</h1>
+    <table style="width: 100%">
+            <tr>
+                <th style="background-color: rgb(136, 136, 230);"><a href=home.html>
+                        <h1>Home</h1>
+                    </a></th>
+                <th style="background-color: rgb(136, 136, 230);"><a href=gallery.html>
+                        <h2>Gallery</h2>
+                    </a></th>
+                <th style="background-color: rgb(136, 136, 230);"><a href=contact.html>
+                        <h2>Contact</h2>
+                    </a></th>
+            </tr>
+        </table>
+        <table style="width:100%; border: 1px solid black ">
+            <tr>
+                <td width=70%>
+                    <h2>Sarun Suesuwan</h2>
+                    <h3>Student</h3>
+                    <a href="mailto:sarun_sue@cmu.ac.th">sarun_sue@cmu.ac.th</a>
+                    <h4>Tell : 095-6979542</h4>
+                </td>
+                <td>
+                    <img  src="images/4.jpg" alt="" height="200px" width="200px">
+                </td>
+            </tr>
+        </table>
 </body>
 </html>
