--- a/home.html
+++ b/home.html
@@ -24,11 +24,14 @@
     </table>
     <table style="width:100%; border: 1px solid black ">
         <tr>
-            <td>
+            <td width=70%>
                 <h2>Sarun Suesuwan</h2>
                 <h3>Student</h3>
-                <a href=home.html>sarun_sue@cmu.ac.th</a>
-                <h4>Tell : 0956979542</h4>
+                <a href="mailto:sarun_sue@cmu.ac.th">sarun_sue@cmu.ac.th</a>
+                <h4>Tell : 095-6979542</h4>
+            </td>
+            <td>
+                <img  src="images/4.jpg" alt="" height="200px" width="200px">
             </td>
         </tr>
     </table>
@@ -41,24 +44,29 @@
             <th><h3>Skill</h3></th>
             <td><table style="width:100%">
                 <tr>
-                    <th>Web desing</th>
-                    <th>Interface desing</th>
-                    <th>Project direction</th>
-                </tr>
-                <tr>
-                    <td>...</td>
-                    <td>...</td>
-                    <td>...</td>
-                </tr>
+                    <th width = "200px">Web desing</th>
+                    <th width = "200px">Interface desing</th>
+                    <th width = "200px">Project direction</th>
+                    <tr>
+                        <td align ="center"; width = "200px">web desing ... may be my type<br>
+                            -----
+                        </td>
+                        <td align ="center"; width = "200px">usually I don't like interface<br>
+                            -----
+                        </td>
+                        <td align ="center"; width = "200px">normaly coding<br>
+                            -----
+                        </td>
+                    </tr>
             </table></td>
         </tr>
         <tr>
             <th><h3>Technical</h3></th>
             <td><table style="width:100%">
                 <tr>
-                    <td>...</td>
-                    <td>...</td>
-                    <td>...</td>
+                    <td align ="center"; width = "200px">Training base of web</td>
+                    <td align ="center"; width = "200px">Didn't know</td>
+                    <td align ="center"; width = "200px">Don't want to dising hard were</td>
                 </tr>
             </table></td>
         </tr>
@@ -66,16 +74,16 @@
             <th><h3>Experience</h3></th>
             <td><table style="width:100%">
                 <tr><h2>Facebook</h2></tr>
-                <tr>... facebook ...</tr><br>
+                <tr>... I use facebook ...</tr><br>
                 <tr>_____________________________________________</tr>
                 <tr><h2>Apple Inc.</h2></tr>
-                <tr>... Apple Inc. ...</tr><br>
+                <tr>... I don't know Apple Inc. ...</tr><br>
                 <tr>_____________________________________________</tr>
                 <tr><h2>Microsoft</h2></tr>
-                <tr>... microsoft ...</tr><br>
+                <tr>... I use microsoft ...</tr><br>
                 <tr>_____________________________________________</tr>
                 <tr><h2>International Business Machines (IBM)</h2></tr>
-                <tr>... IBM ...</tr><br>
+                <tr>... What is IBM ?...</tr><br>
                 <tr>_____________________________________________</tr>
             </table></td>
         </tr>
@@ -84,7 +92,7 @@
             <td> ... </td>
         </tr>
     </table>
-    <p>Sarun Suesuwan -- sarun_sue@cmu.ac.th--0956975942</p>
+    <p align ="center">Sarun Suesuwan -- <a href="mailto:sarun_sue@cmu.ac.th">sarun_sue@cmu.ac.th </a>--Tell: 095-6975942</p>
     
 </body>
 
