--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is Gallery Page</h1><table style="width: 100%">
+    <table style = "width:100%">
             <tr>
                 <th style="background-color: rgb(136, 136, 230);"><a href=home.html>
                         <h2>Home</h2>
@@ -22,12 +22,55 @@
         </table>
         <table style="width:100%; border: 1px solid black ">
             <tr>
-                <td>
+                <td width = "70%">
                     <h2>Sarun Suesuwan</h2>
                     <h3>Student</h3>
-                    <a href=home.html>sarun_sue@cmu.ac.th</a>
+                    <a href=gallery.html>sarun_sue@cmu.ac.th</a>
                     <h4>Tell : 0956979542</h4>
                 </td>
+                <td>
+                    <img  src="images/4.jpg" alt="" height="200px" width="200px">
+                </td>
+            </tr>
+        </table>
+        <table style="width:100%; border: 1px solid black ">
+            <tr align="center"><!-- first line -->
+                    <td><img src="images/hello.jpg" alt="" height="200px" width="200px"></td>
+                    <td><img src="images/programmer.jpg" alt="" height="200px" width="200px"></td>
+                    <td><img src="images/8bit.jpg" alt="" height="200px" width="200px"></td>
+                    <td><img src="images/8bit2.jpg" alt="" height="200px" width="200px"></td>
+            </tr>
+            <tr align="center"><!-- first line -->
+                <td style="border: 1px solid black ">Hello my name is touch</td>
+                <td style="border: 1px solid black ">I want to be a programmer in the future</td>
+                <td style="border: 1px solid black ">I like 8 bit game</td>
+                <td style="border: 1px solid black ">especially game form japan</td>
+            </tr>
+            <br>
+            <tr align="center"><!-- second line -->
+                <td><img src="images/earthTone.png" alt="" height="200px" width="200px"></td>
+                <td><img src="images/exEarthTone.jpg" alt="" height="200px" width="200px"></td>
+                <td><img src="images/sea.jpg" alt="" height="200px" width="200px"></td>
+                <td><img src="images/farm.jpg" alt="" height="200px" width="200px"></td>
+            </tr>
+            <tr align="center"><!-- second line -->
+                <td style="border: 1px solid black ">I like Earth Tone</td>
+                <td style="border: 1px solid black ">Indeed I like all this Tone</td>
+                <td style="border: 1px solid black ">If someone asks ,I want to relax at the sea</td>
+                <td style="border: 1px solid black ">but I'm ok with a field</td>
+            </tr>
+            <br>
+            <tr align="center"><!-- second line -->
+                <td><img src="images/bear.jpg" alt="" height="200px" width="200px"></td>
+                <td><img src="images/bear2.jpg" alt="" height="200px" width="200px"></td>
+                <td><img src="images/sea.jpg" alt="" height="200px" width="200px"></td>
+                <td><img src="images/farm.jpg" alt="" height="200px" width="200px"></td>
+            </tr>
+            <tr align="center"><!-- second line -->
+                <td style="border: 1px solid black ">My favorite animal is bear</td>
+                <td style="border: 1px solid black ">because I like to see them sleep</td>
+                <td style="border: 1px solid black ">If someone asks ,I want to relax at the sea</td>
+                <td style="border: 1px solid black ">but I'm ok with a field</td>
             </tr>
         </table>
 </body>
