--- a/contact.html
+++ b/contact.html
@@ -10,16 +10,17 @@
     <table style="width: 100%">
             <tr>
                 <th style="background-color: rgb(136, 136, 230);"><a href=home.html>
-                        <h1>Home</h1>
+                        <h2>Home</h2>
                     </a></th>
                 <th style="background-color: rgb(136, 136, 230);"><a href=gallery.html>
                         <h2>Gallery</h2>
                     </a></th>
                 <th style="background-color: rgb(136, 136, 230);"><a href=contact.html>
-                        <h2>Contact</h2>
+                        <h1>Contact</h1>
                     </a></th>
             </tr>
         </table>
+        <br>
         <table style="width:100%; border: 1px solid black ">
             <tr>
                 <td width=70%>
@@ -32,6 +33,64 @@
                     <img  src="images/4.jpg" alt="" height="200px" width="200px">
                 </td>
             </tr>
+        </table>
+        <br>
+        <table style="width:100%; border:1px solid black">
+            <tr>
+                <td width = 40% align="center"><h3>
+                    Subject :
+                </h3></td>
+                <td width = 60% >
+                    <input type="text" name="subject" value width= "50px">
+                </td>
+            </tr>
+            <tr>
+                <td align="center"><h3>
+                    Message :
+                </h3></td>
+                <td>
+                        <input type="text" name="message" value width= "50px">
+                </td>
+            </tr>
+            <tr>
+                <td align="center"><h3>
+                    Name :
+                </h3></td>
+                <td>
+                        <input type="text" name="name" value width= "50px">
+                </td>
+            </tr>
+            <tr>
+                <td align="center"><h3>
+                    Gender :
+                </h3></td>
+                <td >
+                        <input type="radio" name="gender" value = "male">male
+                        <input type="radio" name="genter" value = "female">female
+                </td>
+            </tr>
+            <tr>
+                <td align="center"><h3>
+                    Phone :
+                </h3></td>
+                <td >
+                        <input type="text" name="phone" value width= "50px">
+                </td>
+            </tr>
+            <tr>
+                <td align="center"><h3>
+                    Email :
+                </h3></td>
+                <td >
+                        <input type="text" name="email" value width= "50px">
+                </td>
+            </tr>
+            <tr>
+                <td align="center">
+                    <input type="submit" name="submit" value="submit">
+                </td>
+            </tr>
+
         </table>
 </body>
 </html>
