--- a/gallery.html
+++ b/gallery.html
@@ -20,6 +20,7 @@
                     </a></th>
             </tr>
         </table>
+        <br>
         <table style="width:100%; border: 1px solid black ">
             <tr>
                 <td width = "70%">
@@ -29,48 +30,48 @@
                     <h4>Tell : 0956979542</h4>
                 </td>
                 <td>
-                    <img  src="images/4.jpg" alt="" height="200px" width="200px">
+                    <img  src="images/4.jpg" alt="" height="300px" width="100%">
                 </td>
             </tr>
         </table>
         <table style="width:100%; border: 1px solid black ">
             <tr align="center"><!-- first line -->
-                    <td><img src="images/hello.jpg" alt="" height="200px" width="200px"></td>
-                    <td><img src="images/programmer.jpg" alt="" height="200px" width="200px"></td>
-                    <td><img src="images/8bit.jpg" alt="" height="200px" width="200px"></td>
-                    <td><img src="images/8bit2.jpg" alt="" height="200px" width="200px"></td>
+                    <td width=25% height=200px><img src="images/hello.jpg" alt="" height = "100%" width = "100%" ></td>
+                    <td width=25% height=200px><img src="images/programmer.jpg" alt="" height="100%" width="100%"></td>
+                    <td width=25% height=200px><img src="images/8bit.jpg" alt="" height="100%" width="100%"></td>
+                    <td width=25% height=200px><img src="images/8bit2.jpg" alt="" height="100%" width="100%"></td>
             </tr>
             <tr align="center"><!-- first line -->
-                <td style="border: 1px solid black ">Hello my name is touch</td>
-                <td style="border: 1px solid black ">I want to be a programmer in the future</td>
-                <td style="border: 1px solid black ">I like 8 bit game</td>
-                <td style="border: 1px solid black ">especially game form japan</td>
+                <td width=25% style="border: 1px solid black ">Hello my name is touch</td>
+                <td width=25% style="border: 1px solid black ">I want to be a programmer in the future</td>
+                <td width=25% style="border: 1px solid black ">I like 8 bit game</td>
+                <td width=25% style="border: 1px solid black ">especially game form japan</td>
             </tr>
             <br>
             <tr align="center"><!-- second line -->
-                <td><img src="images/earthTone.png" alt="" height="200px" width="200px"></td>
-                <td><img src="images/exEarthTone.jpg" alt="" height="200px" width="200px"></td>
-                <td><img src="images/sea.jpg" alt="" height="200px" width="200px"></td>
-                <td><img src="images/farm.jpg" alt="" height="200px" width="200px"></td>
+                <td width=25% height=200px><img src="images/earthTone.png" alt="" height="100%" width="100%"></td>
+                <td width=25% height=200px><img src="images/exEarthTone.jpg" alt="" height="100%" width="100%"></td>
+                <td width=25% height=200px><img src="images/sea.jpg" alt="" height="100%" width="100%"></td>
+                <td width=25% height=200px><img src="images/farm.jpg" alt="" height="100%" width="100%"></td>
             </tr>
             <tr align="center"><!-- second line -->
-                <td style="border: 1px solid black ">I like Earth Tone</td>
-                <td style="border: 1px solid black ">Indeed I like all this Tone</td>
-                <td style="border: 1px solid black ">If someone asks ,I want to relax at the sea</td>
-                <td style="border: 1px solid black ">but I'm ok with a field</td>
+                <td width=25% style="border: 1px solid black ">I like Earth Tone</td>
+                <td width=25% style="border: 1px solid black ">Indeed I like all this Tone</td>
+                <td width=25% style="border: 1px solid black ">If someone asks ,I want to relax at the sea</td>
+                <td width=25% style="border: 1px solid black ">but I'm ok with a field</td>
             </tr>
             <br>
             <tr align="center"><!-- second line -->
-                <td><img src="images/bear.jpg" alt="" height="200px" width="200px"></td>
-                <td><img src="images/bear2.jpg" alt="" height="200px" width="200px"></td>
-                <td><img src="images/sea.jpg" alt="" height="200px" width="200px"></td>
-                <td><img src="images/farm.jpg" alt="" height="200px" width="200px"></td>
+                <td width=25% height=200px><img src="images/bear.jpg" alt="" height="100%" width="100%"></td>
+                <td width=25% height=200px><img src="images/bear2.jpg" alt="" height="100%" width="100%"></td>
+                <td width=25% height=200px><img src="images/bear3.jpg" alt="" height="100%" width="100%"></td>
+                <td width=25% height=200px><img src="images/thanks.gif" alt="" height="100%" width="100%"></td>
             </tr>
             <tr align="center"><!-- second line -->
-                <td style="border: 1px solid black ">My favorite animal is bear</td>
-                <td style="border: 1px solid black ">because I like to see them sleep</td>
-                <td style="border: 1px solid black ">If someone asks ,I want to relax at the sea</td>
-                <td style="border: 1px solid black ">but I'm ok with a field</td>
+                <td width=25% style="border: 1px solid black ">My favorite animal is bear</td>
+                <td width=25% style="border: 1px solid black ">because I like to see them sleep</td>
+                <td width=25% style="border: 1px solid black ">very comfortable</td>
+                <td width=25% style="border: 1px solid black ">thank you for watching</td>
             </tr>
         </table>
 </body>
