--- a/home.html
+++ b/home.html
@@ -22,6 +22,7 @@
                 </a></th>
         </tr>
     </table>
+    <br>
     <table style="width:100%; border: 1px solid black ">
         <tr>
             <td width=70%>
@@ -35,6 +36,7 @@
             </td>
         </tr>
     </table>
+    <br>
     <table style="width:100%; border: 1px solid black ">
         <tr>
             <th><h3>Profile</h3></th>
@@ -74,7 +76,7 @@
             <th><h3>Experience</h3></th>
             <td><table style="width:100%">
                 <tr><h2>Facebook</h2></tr>
-                <tr>... I use facebook ...</tr><br>
+                <tr>... I like to use facebook ...</tr><br>
                 <tr>_____________________________________________</tr>
                 <tr><h2>Apple Inc.</h2></tr>
                 <tr>... I don't know Apple Inc. ...</tr><br>
